--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@libsql/client": "^0.15.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "dotenv-expand": "^12.0.2",
     "drizzle-orm": "^0.44.2",
@@ -22,6 +23,7 @@
     "zod": "^3.25.53"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.30",
     "drizzle-kit": "^0.31.1",
