--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "dev": "tsx watch api/index.ts",
-    "build": "rimraf dist && tsc",
+    "build": "tsc",
     "start": "node dist/index.js",
     "vercel-build": "echo hello"
   },
