--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "tsx watch api/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "vercel-build": "echo hello"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "Charlie Feng",
