--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "target": "es6",
+    "module": "commonjs",
     "esModuleInterop": true,
+    "moduleResolution": "node",
     "strict": true,
     "types": ["node"],
     "skipLibCheck": true,
