--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "tsx watch api/index.ts",
     "build": "rimraf dist && tsc",
-    "start": "node dist/index.js",
-    "vercel-build": "echo hello"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "Charlie Feng",
