--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
-    "rootDir": "api"
+    "rootDir": "src"
   },
-  "include": ["api/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
