--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "rimraf dist && tsc",
-    "start": "node dist/index.js",
+    "start": "node api/index.ts",
     "vercel-build": "echo hello"
   },
   "keywords": [],
